fixing missing background image

--- a/css/cybersecurity-links.css
+++ b/css/cybersecurity-links.css
@@ -30,7 +30,7 @@
 
  @media only screen and (max-width: 1024px) and (orientation:portrait) {
     body {
-       background-image :url(https://img.wallpapersafari.com/phone/750/1334/31/67/NG82fm.jpg) ;
+       background-image :url('../images/latch-portrait.jpg') ;
        background-size: cover;
     }
     .page {
